--- a/style.css
+++ b/style.css
@@ -13,6 +13,18 @@ header {
     padding: 1em;
 }
 
+#work-experience {
+    padding-left: 50px;
+    padding-right: 50px;
+}
+#work-experience {
+    max-width: calc(100% - 100px); /* Adjust the width taking into account the padding */
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
 nav ul {
     list-style: none;
     display: flex;
